--- a/index.html
+++ b/index.html
@@ -7,47 +7,78 @@
 	<title>Fatih Gelmiş</title>
 </head>
 <body>
+	<img width="800" height="300" src="images/earthfromspace.jpg" alt="Earth From Space">
+	<h1><b>Fatih Gelmiş</b></h1><hr>
+&nbsp;
+&nbsp;
+	<div>
 	<!--Kısa Özgeçmiş-->
-	<h1><b>Fatih Gelmiş</b></h1>
-	<h2><b>Hakkımda</b></h2>
-	<p>
-    <ul><i>
-    Merhaba, ben Fatih. Marangoz bir baba ve ev hanımı bir annenin ilk çocuğu olarak Samsun' da dünyaya gözlerimi açtım. Şimdi ise 31 yaşındayım. Evli ve 1 çocuk babası olarak İstanbul' da yaşıyorum. <br>
-	Bilgi Teknolojileri Uzmanı olarak çalışmaktayım ve bu alanda yardım masası, son kullanıcı desteği, ağ/sunucu yönetimi vb. alanlarda 5 yılı aşkın bir tecrübeye sahibim<br>
-	Bana bir şeyler katabileceğini düşündüğüm hemen herşeye vakit harcamayı severim. Dizi, film, müzik, gezi, kitap okumak, araştırma yapmak ve yeni şeyler denemeyi seviyorum. <br>
-	Ancak şu sıralar aktif olarak <a href="https://www.patika.dev/tr">patika.dev</a> üzerindeki eğitimler ve patikalarda kendimi yazılım alanında geliştiriyorum.
-    </i></ul>
-  </p>
-  <h3><b>Eğitim</b></h3>
-  <p>
-    <ul>
-      <i><li>Samsun Ondokuz Mayıs Üni. MYO. - Bilgisayar Tekn. ve Prog. - 2008/2011</li>
-      <li>Anadolu Üni. AÖF. - Çalışma Ekonomisi ve Endüstri İlişkileri - 2012/2018</li></i>
-    </ul>
-  </p>
-  <h3><b>Kariyer</b></h3>
-  <p>
-    <ul>
-      <i><li>Gelbul Kağıtçılık San. Tic. A.Ş. - Bilgi İşlem Uzmanı - 2016/...</li>
-      <i><li>Bıçakcılar Tıbbi Cihaz San. Tic. A.Ş. - Bilgi İşlem Uzman Yardımcısı - 2011/2012</li></i>
-    </ul>
-  </p>
-	<!-- Kitaplar -->
-	<h3>Okuduğum ve hoşuma giden bazı kitaplar;</h3>
-	<ol>
-		<li>Sefiller - Victor HUGO</li>
-		<li>1984 - George ORWELL</li>
-		<li>Mecburiyet - Stefan ZWEİG</li>
-		<li>Bu Ülke - Cemil MERİÇ </li>
-	</ol>
-	<!-- Filmler -->
-	<h3>İzlediğim ve hoşuma giden bazı diziler/filmler;</h3>
-	<ol>
-		<li>The Green Mile</li>
-		<li>Breaking Bad</li>
-		<li>Interstellar</li>
-		<li>The Shining</li>
-    <li>Fight Club</li>
-	</ol>
+		<h2><b>Hakkımda</b></h2>
+			<p>
+				<ul>
+					<i>
+						Merhaba, ben Fatih. Marangoz bir baba ve ev hanımı bir annenin ilk çocuğu olarak Samsun' da dünyaya gözlerimi açtım. Şimdi ise 31 yaşındayım. Evli ve 1 çocuk babası olarak İstanbul' da yaşıyorum. <br>
+						Bilgi Teknolojileri Uzmanı olarak çalışmaktayım ve bu alanda yardım masası, son kullanıcı desteği, ağ/sunucu yönetimi vb. alanlarda 5 yılı aşkın bir tecrübeye sahibim.<br>
+						Bana bir şeyler katabileceğini düşündüğüm hemen herşeye vakit harcamayı severim. Dizi, film, müzik, gezi, kitap okumak, araştırma yapmak ve yeni şeyler denemeyi seviyorum. <br>
+						Ancak şu sıralar aktif olarak <a href="https://app.patika.dev/onboarding" target="_blank">patika.dev</a> üzerindeki eğitimler ve patikalarda kendimi yazılım alanında geliştiriyorum.
+					</i>
+				</ul>
+			</p>
+	</div>
+	<div>
+	<!-- Eğitim -->
+		<h3><b>Eğitim</b></h3>
+			<p>
+				<ul>
+					<i>
+						<li>Anadolu Üni. AÖF. - <b>Çalışma Ekonomisi ve Endüstri İlişkileri</b> - 2012/2018</li>
+						<li>Samsun Ondokuz Mayıs Üni. MYO. - <b>Bilgisayar Tekn. ve Prog.</b> - 2008/2011</li>
+					</i>
+				</ul>
+			</p>
+	</div>
+	<div>
+	<!-- Kariyer -->
+		<h3><b>Kariyer</b></h3>
+			<p>
+				<ul>
+					<i>
+						<li>Gelbul Kağıtçılık San. Tic. A.Ş. - <b>Bilgi İşlem Uzmanı</b> - 2016/...</li>
+						<li>Bıçakcılar Tıbbi Cihaz San. Tic. A.Ş. - <b>Bilgi İşlem Uzman Yardımcısı</b> - 2011/2012</li>
+					</i>
+				</ul>
+			</p>
+	</div>
+&nbsp;
+<div>
+<!-- Yapmaktan hoşlandığım giden şeyler -->
+	<h4>Beğendiğim bazı içerikler</h4>
+		<ol1> 1. Kitaplar
+			<ul>
+				<li><a href="https://tny.im/fUe1O" target="_blank">Nutuk - Mustafa Kemal ATATÜRK</a></li>
+				<li>Mecburiyet - Stefan ZWEİG</li>
+				<li>Bu Ülke - Cemil MERİÇ </li>
+			</ul>
+		</ol1>
+		<ol2> 2. Diziler
+			<ul>
+				<li><a href="https://www.imdb.com/title/tt0903747/" target="_blank">Breaking Bad</a></li>
+				<li><a href="https://www.imdb.com/title/tt0898266/" target="_blank">Big Bang Theory</a></li>
+				<li></li>
+			</ul>
+		</ol2>
+		<ol3> 3. Filmler
+			<ul>
+				<li>The Green Mile</li>
+				<li>Interstellar</li>
+				<li><a href="https://www.imdb.com/title/tt0081505/" target="_blank">The Shining</a></li>
+			</ul>
+		</ol3>
+&nbsp;
+&nbsp;
+<!-- İletişim -->
+<div><hr>
+	<a href="mailto:gelmisc@gmail.com">E-Mail</a> &nbsp; <a href="https://www.linkedin.com/in/facege/" target="_blank">Linkedin</a> &nbsp; <a href="https://github.com/gelmisc" target="_blank">Github</a> &nbsp;<a href="tel:+905301324567">Telefon</a><hr>
+</div>
 </body>
 </html>
