--- a/index.html
+++ b/index.html
@@ -1,84 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Fatih Gelmiş</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MSN.com</title>
 </head>
 <body>
-	<img width="800" height="300" src="images/earthfromspace.jpg" alt="Earth From Space">
-	<h1><b>Fatih Gelmiş</b></h1><hr>
-&nbsp;
-&nbsp;
-	<div>
-	<!--Kısa Özgeçmiş-->
-		<h2><b>Hakkımda</b></h2>
-			<p>
-				<ul>
-					<i>
-						Merhaba, ben Fatih. Marangoz bir baba ve ev hanımı bir annenin ilk çocuğu olarak Samsun' da dünyaya gözlerimi açtım. Şimdi ise 31 yaşındayım. Evli ve 1 çocuk babası olarak İstanbul' da yaşıyorum. <br>
-						Bilgi Teknolojileri Uzmanı olarak çalışmaktayım ve bu alanda yardım masası, son kullanıcı desteği, ağ/sunucu yönetimi vb. alanlarda 5 yılı aşkın bir tecrübeye sahibim.<br>
-						Bana bir şeyler katabileceğini düşündüğüm hemen herşeye vakit harcamayı severim. Dizi, film, müzik, gezi, kitap okumak, araştırma yapmak ve yeni şeyler denemeyi seviyorum. <br>
-						Ancak şu sıralar aktif olarak <a href="https://app.patika.dev/onboarding" target="_blank">patika.dev</a> üzerindeki eğitimler ve patikalarda kendimi yazılım alanında geliştiriyorum.
-					</i>
-				</ul>
-			</p>
-	</div>
-	<div>
-	<!-- Eğitim -->
-		<h3><b>Eğitim</b></h3>
-			<p>
-				<ul>
-					<i>
-						<li>Anadolu Üni. AÖF. - <b>Çalışma Ekonomisi ve Endüstri İlişkileri</b> - 2012/2018</li>
-						<li>Samsun Ondokuz Mayıs Üni. MYO. - <b>Bilgisayar Tekn. ve Prog.</b> - 2008/2011</li>
-					</i>
-				</ul>
-			</p>
-	</div>
-	<div>
-	<!-- Kariyer -->
-		<h3><b>Kariyer</b></h3>
-			<p>
-				<ul>
-					<i>
-						<li>Gelbul Kağıtçılık San. Tic. A.Ş. - <b>Bilgi İşlem Uzmanı</b> - 2016/...</li>
-						<li>Bıçakcılar Tıbbi Cihaz San. Tic. A.Ş. - <b>Bilgi İşlem Uzman Yardımcısı</b> - 2011/2012</li>
-					</i>
-				</ul>
-			</p>
-	</div>
-&nbsp;
-<div>
-<!-- Yapmaktan hoşlandığım giden şeyler -->
-	<h4>Beğendiğim bazı içerikler</h4>
-		<ol1> 1. Kitaplar
-			<ul>
-				<li><a href="https://tny.im/fUe1O" target="_blank">Nutuk - Mustafa Kemal ATATÜRK</a></li>
-				<li>Mecburiyet - Stefan ZWEİG</li>
-				<li>Bu Ülke - Cemil MERİÇ </li>
-			</ul>
-		</ol1>
-		<ol2> 2. Diziler
-			<ul>
-				<li><a href="https://www.imdb.com/title/tt0903747/" target="_blank">Breaking Bad</a></li>
-				<li><a href="https://www.imdb.com/title/tt0898266/" target="_blank">Big Bang Theory</a></li>
-				<li></li>
-			</ul>
-		</ol2>
-		<ol3> 3. Filmler
-			<ul>
-				<li>The Green Mile</li>
-				<li>Interstellar</li>
-				<li><a href="https://www.imdb.com/title/tt0081505/" target="_blank">The Shining</a></li>
-			</ul>
-		</ol3>
-&nbsp;
-&nbsp;
-<!-- İletişim -->
-<div><hr>
-	<a href="mailto:gelmisc@gmail.com">E-Mail</a> &nbsp; <a href="https://www.linkedin.com/in/facege/" target="_blank">Linkedin</a> &nbsp; <a href="https://github.com/gelmisc" target="_blank">Github</a> &nbsp;<a href="tel:+905301324567">Telefon</a><hr>
-</div>
+    <!--header-->
+    <header>
+        <img src="https://picsum.photos/id/17/800/300">
+    </header>
+    <!--navbar start-->
+    <nav>
+        <li>
+            <a href="index.html">Anasayfa</a>
+        </li>
+        <li>
+            <a href="about.html">Hakkımızda</a>
+        </li>
+        <li>
+            <a href="contact.html">İletişim</a>
+        </li>
+    </nav>
+    <!--navbar end-->
+    <!--section start-->
+    <section>
+    <!--article start-->
+        <article>
+            <h2>YAZI 1</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui dolorum dignissimos maiores accusantium maxime facilis obcaecati, saepe cum a, at ipsam eius laboriosam explicabo? Ullam error reprehenderit in nemo maiores?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam debitis perspiciatis commodi eligendi earum doloremque praesentium beatae, reprehenderit fugiat quidem distinctio, voluptas dolores nisi modi placeat neque ipsa impedit dolor.</p>
+            <ol>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Eligendi fugit cum minus inventore.</li>
+                <li>Aspernatur aperiam excepturi dolore tempora.</li>
+                <li>Fugiat nihil tenetur iure eveniet.</li>
+                <ul>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                    <li>Dolore ex cupiditate aspernatur nulla excepturi commodi consectetur.</li>
+                </ul>
+            </ol>
+        </article>
+        <hr> 
+        <article>
+            <h2>YAZI 2</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores, dignissimos!</p>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <ul>
+                <li>Lorem, ipsum dolor.</li>
+                <li>Eos, quae ipsum?</li>
+                <li>Assumenda, id maxime.</li>
+                <li>Obcaecati, quia? Suscipit.</li>
+                <li>Placeat, nostrum a!</li>
+                <li>Deleniti, quasi cum?</li>
+            </ul>
+        </article>
+        <hr>
+        <article>
+            <h2>YAZI 3</h2>
+            <img src="img/html.png" alt="HTML">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt fugit rerum odit nulla ut doloremque nisi enim facere qui sed recusandae saepe nam earum debitis dolor delectus consectetur itaque, culpa eum? Veritatis obcaecati, tempora vero eligendi, non id ipsam quas ipsa esse magnam repudiandae! Quos veniam, temporibus ea nisi officiis deserunt minus vitae excepturi qui beatae eaque laborum a et iusto sequi commodi quidem accusamus similique assumenda culpa molestias enim. Quibusdam saepe illum ipsa molestias at sapiente quidem ipsam! Rem, enim repellendus! Omnis, facilis blanditiis vero harum iusto totam, dignissimos rerum tenetur quibusdam nesciunt aspernatur ducimus error. Iure totam harum dolore assumenda sequi illo, nobis quo deleniti laudantium praesentium quis quos voluptatem voluptatum ut sapiente fugit natus saepe asperiores nostrum. Ullam dignissimos exercitationem illo suscipit aut est quisquam atque, ea iure provident qui ad, magnam itaque corrupti tempora consequatur sint enim ipsam, dolores velit mollitia cum ratione doloremque hic. Repellat amet, voluptas magni incidunt, nesciunt dolorum iure nostrum quod excepturi officia nam voluptatum beatae voluptate exercitationem est! Distinctio omnis aspernatur modi accusantium, nesciunt, dolor voluptatibus, laborum et aliquam aperiam dignissimos vero quasi magni fuga sed ea praesentium sit quisquam eos similique vitae voluptate iure. Voluptatum enim, maxime, impedit magnam, assumenda doloremque aspernatur obcaecati dolorem deleniti harum dolor. Ipsum nisi recusandae explicabo quaerat corporis sapiente voluptate officia dolores. Maxime commodi asperiores architecto est tempore corrupti porro velit. Corporis error molestias eveniet similique libero. Beatae exercitationem dignissimos repudiandae aspernatur animi porro laborum.</p>
+        <hr>
+        </article>
+    <!--article end-->    
+    </section>
+    <!--section end-->
+    <!--footer start-->
+    <!--navbar start-->
+        <nav>
+            <li>
+                <a href="index.html">Anasayfa</a>
+            </li>
+            <li>
+                <a href="about.html">Hakkımızda</a>
+            </li>
+            <li>
+                <a href="contact.html">İletişim</a>
+            </li>
+        </nav>
+    <!--navbar end-->
+    <!--footer end-->
 </body>
 </html>
