--- a/index.html
+++ b/index.html
@@ -1,84 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Fatih Gelmiş</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pişi Tarifi | Yemek.com</title>
 </head>
 <body>
-	<img width="800" height="300" src="images/earthfromspace.jpg" alt="Earth From Space">
-	<h1><b>Fatih Gelmiş</b></h1><hr>
-&nbsp;
-&nbsp;
-	<div>
-	<!--Kısa Özgeçmiş-->
-		<h2><b>Hakkımda</b></h2>
-			<p>
-				<ul>
-					<i>
-						Merhaba, ben Fatih. Marangoz bir baba ve ev hanımı bir annenin ilk çocuğu olarak Samsun' da dünyaya gözlerimi açtım. Şimdi ise 31 yaşındayım. Evli ve 1 çocuk babası olarak İstanbul' da yaşıyorum. <br>
-						Bilgi Teknolojileri Uzmanı olarak çalışmaktayım ve bu alanda yardım masası, son kullanıcı desteği, ağ/sunucu yönetimi vb. alanlarda 5 yılı aşkın bir tecrübeye sahibim.<br>
-						Bana bir şeyler katabileceğini düşündüğüm hemen herşeye vakit harcamayı severim. Dizi, film, müzik, gezi, kitap okumak, araştırma yapmak ve yeni şeyler denemeyi seviyorum. <br>
-						Ancak şu sıralar aktif olarak <a href="https://app.patika.dev/onboarding" target="_blank">patika.dev</a> üzerindeki eğitimler ve patikalarda kendimi yazılım alanında geliştiriyorum.
-					</i>
-				</ul>
-			</p>
-	</div>
-	<div>
-	<!-- Eğitim -->
-		<h3><b>Eğitim</b></h3>
-			<p>
-				<ul>
-					<i>
-						<li>Anadolu Üni. AÖF. - <b>Çalışma Ekonomisi ve Endüstri İlişkileri</b> - 2012/2018</li>
-						<li>Samsun Ondokuz Mayıs Üni. MYO. - <b>Bilgisayar Tekn. ve Prog.</b> - 2008/2011</li>
-					</i>
-				</ul>
-			</p>
-	</div>
-	<div>
-	<!-- Kariyer -->
-		<h3><b>Kariyer</b></h3>
-			<p>
-				<ul>
-					<i>
-						<li>Gelbul Kağıtçılık San. Tic. A.Ş. - <b>Bilgi İşlem Uzmanı</b> - 2016/...</li>
-						<li>Bıçakcılar Tıbbi Cihaz San. Tic. A.Ş. - <b>Bilgi İşlem Uzman Yardımcısı</b> - 2011/2012</li>
-					</i>
-				</ul>
-			</p>
-	</div>
-&nbsp;
-<div>
-<!-- Yapmaktan hoşlandığım giden şeyler -->
-	<h4>Beğendiğim bazı içerikler</h4>
-		<ol1> 1. Kitaplar
-			<ul>
-				<li><a href="https://tny.im/fUe1O" target="_blank">Nutuk - Mustafa Kemal ATATÜRK</a></li>
-				<li>Mecburiyet - Stefan ZWEİG</li>
-				<li>Bu Ülke - Cemil MERİÇ </li>
-			</ul>
-		</ol1>
-		<ol2> 2. Diziler
-			<ul>
-				<li><a href="https://www.imdb.com/title/tt0903747/" target="_blank">Breaking Bad</a></li>
-				<li><a href="https://www.imdb.com/title/tt0898266/" target="_blank">Big Bang Theory</a></li>
-				<li></li>
-			</ul>
-		</ol2>
-		<ol3> 3. Filmler
-			<ul>
-				<li>The Green Mile</li>
-				<li>Interstellar</li>
-				<li><a href="https://www.imdb.com/title/tt0081505/" target="_blank">The Shining</a></li>
-			</ul>
-		</ol3>
-&nbsp;
-&nbsp;
-<!-- İletişim -->
-<div><hr>
-	<a href="mailto:gelmisc@gmail.com">E-Mail</a> &nbsp; <a href="https://www.linkedin.com/in/facege/" target="_blank">Linkedin</a> &nbsp; <a href="https://github.com/gelmisc" target="_blank">Github</a> &nbsp;<a href="tel:+905301324567">Telefon</a><hr>
-</div>
+    <!--header start-->
+    <header>
+        <img width="800" src="https://cdn.yemek.com/mncrop/940/625/uploads/2022/05/1-su-bardagi-sutle-pisi-onecikan.jpg" alt="">
+        <h2>15 Dakikada Hazır: 1 Su Bardağı Sütle Kolay Pişi Tarifi</h2>
+        <hr>
+    </header>
+    <!--header end-->
+    <!--section start-->
+    <section>
+    <!--article start-->
+        <article>
+            <aside>
+            </aside>
+        </article>
+        <article>
+            <p>Kahvaltıya şipşak hazırlanacak, pek lezzetli ve yağ çekmeyen pişiler yapmaya davetlisiniz. <br>
+                Hem de sadece <b>15 dakikada</b> hazırlanıp çok kısa sürede de pişiriliyor. İçinde maya olmadığı için bekleme süresi yok.<br>
+                Bu nedenle zamandan da tasarruf ettiren bir tarif. <br>
+                Yetmez dedik hem ekonomik olması hem de herkesin hemen hazırlayabilmesi için tarifimizi sadece <b>5 malzemeden</b> oluşturduk. <br>
+                Çıtır çıtır, içi puf puf kalan enfes pişiler hazır. Hadi buyurun 1 su bardağı sütle kolay pişi tarifimize. 
+            </p>
+            <hr>
+        </article>
+        <article>
+            <h4>Kolay Pişi Tarifi İçin Malzemeler</h4>
+            <ul>
+                <li>1 su bardağı süt</li>
+                <li>1 paket kabartma tozu</li>
+                <li>3 su bardağı un</li>
+                <li>1 çay kaşığı tuz</li>
+                <h5>Kızartmak için:</h5>
+                <li> 1 su bardağı sıvı yağ</li>
+            </ul>
+            <hr>
+        </article>
+        <article>
+            <h4>1 Su Bardağı Sütle Kolay Pişi Tarifinin Püf Noktası</h4>
+            <p>Hamuru dinlendirirseniz daha güzel açılacak ve daha lezzetli pişileriniz olacaktır.</p>
+            <br>
+            <ol>
+                <li>Sütü kabartma tozunu ve tuzu bir araya getirin ve güzelce karıştırın.</li>
+                <img src="https://cdn.yemek.com/mncrop/600/315/uploads/2022/05/1-su-bardagi-sutle-pisi-yapim1.jpg" alt="">
+                <li>Azar azar unu ilave edin.</li>
+                <img src="https://cdn.yemek.com/mncrop/600/315/uploads/2022/05/1-su-bardagi-sutle-pisi-yapim2.jpg" alt="">
+                <li>Yumuşak, ele yapışmayan bir hamur olana dek yoğurun.</li>
+                <img src="https://cdn.yemek.com/mncrop/600/315/uploads/2022/05/1-su-bardagi-sutle-pisi-yapim3.jpg" alt="">
+                <li>Merdane yardımıyla orta kalınlıkta açın.</li>
+                <img src="https://cdn.yemek.com/mncrop/600/315/uploads/2022/05/1-su-bardagi-sutle-pisi-yapim4.jpg" alt="">
+                <li>Bardağın ağız kısmıyla keserek daire şeklini verin. Yağı bir tavaya alın ve iyice kızdırın. Hazırladığınız pişileri yağda arkalı önlü olacak şekilde kızartın.</li>
+                <img src="https://cdn.yemek.com/mncrop/600/315/uploads/2022/05/1-su-bardagi-sutle-pisi-yapim5.jpg" alt="">
+                <li><h3>Ardından sıcak sıcak servis edin. Afiyetler olsun!</h3></li>
+            </ol>
+        </article>
+    <!--article end-->
+    </section>
+    <!--section end-->
+    <!--footer start-->
+    <footer>
+        <a href="https://yemek.com/tarif/1-su-bardagi-sutle-kolay-pisi/"><b><i>Tarif: yemek.com</i></b> </a>
+    </footer>
+    <!--footer end-->
 </body>
 </html>
